feat: the two endpoints